fix overflow in MultiSelector container

--- a/war/css/bee.css
+++ b/war/css/bee.css
@@ -1522,8 +1522,9 @@
 .bee-MultiSelector-close {
   position: absolute;
   right: 3px;
-  top: -3px;
+  top: 2px;
   font-size: 15px;
+  line-height: 15px;
 }
 .bee-MultiSelector-close:hover {
   color: red;
